-Added solutions for exercises 8.1.11 and 8.1.12

--- a/macros.tex
+++ b/macros.tex
@@ -57,6 +57,9 @@
 \def\rest{\restriction}
 \newcommand\tet[2]{{^{#1}#2}}
 
+% Families of set
+\def\famF{\mathcal{F}}
+
 % This is needed so that half-open intervals do not cause auto-indentation issues due to unmatched brackets
 \newcommand\clop[1]{[#1)}
 
